[tool.poetry]
name = "beer-temp-control"
version = "0.1.0"
description = ""
authors = ["Ellis Percival <flyte@failcode.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
simple-pid = "^0.2.4"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
